Fix skip to content text color in dark mode

--- a/src/scss/app/_app.scss
+++ b/src/scss/app/_app.scss
@@ -13,8 +13,8 @@
   padding: 0.5rem 1.5rem;
   border: 0;
   border-radius: 100vw;
-  background-color: var(--theme-color);
-  color: var(--mono-tint3);
+  background-color: var(--cover-button-primary-background);
+  color: var(--cover-button-primary-color);
   opacity: 0;
   font-size: inherit;
   text-decoration: none;
